--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
@@ -20,7 +24,7 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="position-absolute z-index">
             <div id="main_menu">
                 <div class="logo_area">
                     <a href=""><img src="assets/imgs/logowork-01.png" alt=""></a>
@@ -32,8 +36,7 @@
                         <li><a href="">Detail</a>
                             <ul>
                                 <li><a href="">Dropdown Menu</a></li>
-                                <li><a href="">Dropdown Menu <i class="fa-solid fa-caret-right"
-                                            style="color: aliceblue;"></i></a>
+                                <li><a href="">Dropdown Menu <i class="mx-1 fa-solid fa-angle-right"></i></a>
                                     <ul>
                                         <li><a href="">Dropdown Sub Menu</a></li>
                                         <li><a href="">Dropdown Sub Menu</a></li>
@@ -50,7 +53,7 @@
                         <li><a href="">Map</a>
                             <ul>
                                 <li><a href="">Dropdown Menu</a></li>
-                                <li><a href="">Dropdown Menu</a>
+                                <li><a href="">Dropdown Menu <i class="mx-1 fa-solid fa-angle-right"></i></a>
                                     <ul>
                                         <li><a href="">Dropdown Sub Menu</a></li>
                                         <li><a href="">Dropdown Sub Menu</a></li>
@@ -69,181 +72,44 @@
             </div>
         </nav>
     </header>
-    <section class="sec-1">
-        <div class="container">
-            <div class="row">
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
+
+
+    <section class="sec-1 position-relative">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="assets/imgs/magnificent-woman-long-bright-skirt-dancing-studio-carefree-inspired-female-model-posing-with-pleasure-yellow.jpg"
+                        alt="image">
+                </div>
+
+                <div class="item">
+
+                    <img src="assets/imgs/happy-lady-stylish-skirt-boater-posing-pink-wall.jpg" alt="image">
+                </div>
+                <div class="item">
+                    <img src="assets/imgs/young-woman-beautiful-red-dress.jpg" alt="image">
+                </div>
             </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </section>
-    <section class="sec-2">
-        <div class="container">
-            <div class="row">
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-            </div>
-        </div>
-    </section>
-    <section class="sec-3">
-        <div class="container">
-            <div class="row">
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non aperiam inventore molestiae totam,
-                    aspernatur quaerat aut facilis, placeat debitis nobis ut deleniti repellendus quo laboriosam velit?
-                    Dicta, doloribus aut?</div>
-            </div>
-        </div>
-    </section>
-
-
-
-
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
