--- a/index.html
+++ b/index.html
@@ -111,6 +111,32 @@
         </div>
     </section>
 
+    <section class="my-5">
+        <div class="container">
+            <div class="row">
+                <div class="mx-auto ">
+                    <h2 class="py-5 text-center">
+                        Image Gallery
+                    </h2>
+                </div>
+                <div class="py-5">
+                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam hic
+                        illo
+                        sit cum. Harum culpa dolor maiores dolores, aut atque similique molestiae nobis soluta nesciunt
+                        optio fugiat aperiam cum?</div>
+                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam hic
+                        illo
+                        sit cum. Harum culpa dolor maiores dolores, aut atque similique molestiae nobis soluta nesciunt
+                        optio fugiat aperiam cum?</div>
+                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam hic
+                        illo
+                        sit cum. Harum culpa dolor maiores dolores, aut atque similique molestiae nobis soluta nesciunt
+                        optio fugiat aperiam cum?</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="assets/js/jquery_index.js"></script>
