--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -24,7 +25,7 @@
 
 <body>
     <header>
-        <nav class="position-absolute z-index">
+        <nav class="">
             <div id="main_menu">
                 <div class="logo_area">
                     <a href=""><img src="assets/imgs/logowork-01.png" alt=""></a>
@@ -120,18 +121,46 @@
                     </h2>
                 </div>
                 <div class="py-5">
-                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam hic
-                        illo
-                        sit cum. Harum culpa dolor maiores dolores, aut atque similique molestiae nobis soluta nesciunt
-                        optio fugiat aperiam cum?</div>
-                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam hic
-                        illo
-                        sit cum. Harum culpa dolor maiores dolores, aut atque similique molestiae nobis soluta nesciunt
-                        optio fugiat aperiam cum?</div>
-                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam hic
-                        illo
-                        sit cum. Harum culpa dolor maiores dolores, aut atque similique molestiae nobis soluta nesciunt
-                        optio fugiat aperiam cum?</div>
+                    <div class="col-md-3">
+                        <div class="sale-items" style="width: 238px;">
+                            <a href="#" class="sale-item">
+                                <div class="sale-item-img">
+                                    <img src="assets/imgs/sale-home.jpg" alt="img">
+                                </div>
+                                <h5>Sale</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="sale-items" style="width: 238px;">
+                            <a href="#" class="sale-item">
+                                <div class="sale-item-img">
+                                    <img src="assets/imgs/casual-home.jpg" alt="img">
+                                </div>
+                                <h5>Casual</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="sale-items" style="width: 238px;">
+                            <a href="#" class="sale-item">
+                                <div class="sale-item-img">
+                                    <img src="assets/imgs/indo-home.jpg" alt="img">
+                                </div>
+                                <h5>Indo-Western</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="sale-items" style="width: 238px;">
+                            <a href="#" class="sale-item">
+                                <div class="sale-item-img">
+                                    <img src="assets/imgs/indian-home.jpg" alt="img">
+                                </div>
+                                <h5>Indian</h5>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
