--- a/index.html
+++ b/index.html
@@ -180,18 +180,18 @@
                             <div class="sec-3-carding">
                                 <div class="card-horzontal">
                                     <div class="img-square-wrapper">
-                                        <img src="assets/imgs/73-1008.jpg"
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg"
                                             alt="">
                                     </div>
-                                    <!-- <div class="card-body px-3">
-                                        <div class="veg-img">
+                                    <div class="card-body px-3">
+                                        <!-- <div class="veg-img">
                                             <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
-                                        </div>
+                                        </div> -->
                                         <h4 class="card-title">Java Chip Frappuccino </h4>
                                         <span class="card-subtitle">
                                             TALL(354 ML) .392 kcal
                                         </span>
-                                    </div> -->
+                                    </div>
                                 </div>
                                 <div class="card-footer d-flex justify-content-between  ">
                                     <div class="left-item">
@@ -200,7 +200,7 @@
                                         </h4>
                                     </div>
                                     <div class="right-item">
-                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Item</button>
+                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Cart</button>
                                     </div>
                                 </div>
                             </div>
@@ -345,8 +345,8 @@
                 infinite: false,
                 speed: 300,
                 autoplay: true,
-                slidesToShow: 3,
-                slidesToScroll: 3,
+                slidesToShow: 5,
+                slidesToScroll: 1,
                 responsive: [
                     {
                         breakpoint: 1024,
