--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/slick-theme.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/slick-theme.css"> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
@@ -175,13 +181,46 @@
             <div class="handpicked-section">
                 <div class="col-12">
                     <h2 style="text-align: center;">Handipiked-Item</h2>
-                    <div class="homeslider responsive py-4 my-5">
+                    <div class="homeslider responsive py-4 my-5 owl-carousel">
                         <div class="slide ">
                             <div class="sec-3-carding">
                                 <div class="card-horzontal">
                                     <div class="img-square-wrapper">
-                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg"
-                                            alt="">
+                                        <img src="assets/imgs/insta.png" alt="">
+                                    </div>
+                                    <a href="" class="py-3 ">
+                                        <div class="card-body px-3">
+                                            <!-- <div class="veg-img">
+                                            <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
+                                        </div> -->
+                                            <h4 class="card-title">Java Chip Frappuccino </h4>
+                                            <span class="card-subtitle">
+                                                TALL(354 ML) .392 kcal
+                                            </span>
+                                        </div>
+                                    </a>
+
+                                    <a href="" class="">
+                                        <div class="card-footer d-flex justify-content-between  px-3">
+                                            <div class="left-item">
+                                                <h4>
+                                                    ₹ 351<span class="round-figure">.75</span>
+                                                </h4>
+                                            </div>
+                                            <div class="right-item">
+                                                <button class="custom-btn btn-green btn-rounded personal-btn">Add
+                                                    Cart</button>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide ">
+                            <div class="sec-3-carding">
+                                <div class="card-horzontal">
+                                    <div class="img-square-wrapper">
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg" alt="">
                                     </div>
                                     <div class="card-body px-3">
                                         <!-- <div class="veg-img">
@@ -205,20 +244,19 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide ">
                             <div class="sec-3-carding">
-                                <div class="card-horzontal d-flex">
+                                <div class="card-horzontal">
                                     <div class="img-square-wrapper">
-                                        <img src="https://starbucks-cdn-01.s3.ap-south-1.amazonaws.com/Items/Large/105468.jpg"
-                                            alt="">
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg" alt="">
                                     </div>
                                     <div class="card-body px-3">
-                                        <div class="veg-img">
+                                        <!-- <div class="veg-img">
                                             <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
-                                        </div>
-                                        <h4 class="card-title">Cold Coffee </h4>
+                                        </div> -->
+                                        <h4 class="card-title">Java Chip Frappuccino </h4>
                                         <span class="card-subtitle">
-                                            TALL(354 ML) .354 kcal
+                                            TALL(354 ML) .392 kcal
                                         </span>
                                     </div>
                                 </div>
@@ -229,94 +267,119 @@
                                         </h4>
                                     </div>
                                     <div class="right-item">
-                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Item</button>
+                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Cart</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide ">
                             <div class="sec-3-carding">
-                                <div class="card-horzontal d-flex">
+                                <div class="card-horzontal">
                                     <div class="img-square-wrapper">
-                                        <img src="https://starbucks-cdn-01.s3.ap-south-1.amazonaws.com/Items/Large/105000.jpg"
-                                            alt="">
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg" alt="">
                                     </div>
                                     <div class="card-body px-3">
-                                        <div class="veg-img">
+                                        <!-- <div class="veg-img">
                                             <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
-                                        </div>
-                                        <h4 class="card-title">Vanilla Sweet Cream Cold Brew </h4>
+                                        </div> -->
+                                        <h4 class="card-title">Java Chip Frappuccino </h4>
                                         <span class="card-subtitle">
-                                            TALL(354 ML) .63 kcal
+                                            TALL(354 ML) .392 kcal
                                         </span>
                                     </div>
                                 </div>
                                 <div class="card-footer d-flex justify-content-between  ">
                                     <div class="left-item">
                                         <h4>
-                                            ₹ 383<span class="round-figure">.25</span>
+                                            ₹ 351<span class="round-figure">.75</span>
                                         </h4>
                                     </div>
                                     <div class="right-item">
-                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Item</button>
+                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Cart</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide ">
                             <div class="sec-3-carding">
-                                <div class="card-horzontal d-flex">
+                                <div class="card-horzontal">
                                     <div class="img-square-wrapper">
-                                        <img src="https://starbucks-cdn-01.s3.ap-south-1.amazonaws.com/Items/Large/100447.jpg"
-                                            alt="">
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg" alt="">
                                     </div>
                                     <div class="card-body px-3">
-                                        <div class="veg-img">
+                                        <!-- <div class="veg-img">
                                             <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
-                                        </div>
-                                        <h4 class="card-title">Signature Hot Chocolate </h4>
+                                        </div> -->
+                                        <h4 class="card-title">Java Chip Frappuccino </h4>
                                         <span class="card-subtitle">
-                                            SHORT(237 ML) .284 kcal
+                                            TALL(354 ML) .392 kcal
                                         </span>
                                     </div>
                                 </div>
                                 <div class="card-footer d-flex justify-content-between  ">
                                     <div class="left-item">
                                         <h4>
-                                            ₹ 278<span class="round-figure">.25</span>
+                                            ₹ 351<span class="round-figure">.75</span>
                                         </h4>
                                     </div>
                                     <div class="right-item">
-                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Item</button>
+                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Cart</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="slide">
+                        <div class="slide ">
                             <div class="sec-3-carding">
-                                <div class="card-horzontal d-flex">
+                                <div class="card-horzontal">
                                     <div class="img-square-wrapper">
-                                        <img src="https://starbucks-cdn-01.s3.ap-south-1.amazonaws.com/Items/Large/100377.jpg"
-                                            alt="">
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg" alt="">
                                     </div>
                                     <div class="card-body px-3">
-                                        <div class="veg-img">
+                                        <!-- <div class="veg-img">
                                             <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
-                                        </div>
-                                        <h4 class="card-title">Caffe Latte </h4>
+                                        </div> -->
+                                        <h4 class="card-title">Java Chip Frappuccino </h4>
                                         <span class="card-subtitle">
-                                            SHORT(237 ML) .104 kcal
+                                            TALL(354 ML) .392 kcal
                                         </span>
                                     </div>
                                 </div>
                                 <div class="card-footer d-flex justify-content-between  ">
                                     <div class="left-item">
                                         <h4>
-                                            ₹ 273<span class="round-figure">.00</span>
+                                            ₹ 351<span class="round-figure">.75</span>
                                         </h4>
                                     </div>
                                     <div class="right-item">
-                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Item</button>
+                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Cart</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slide ">
+                            <div class="sec-3-carding">
+                                <div class="card-horzontal">
+                                    <div class="img-square-wrapper">
+                                        <img src="assets/imgs/pexels-sangeet-rao-12358372.jpg" alt="">
+                                    </div>
+                                    <div class="card-body px-3">
+                                        <!-- <div class="veg-img">
+                                            <img src="https://www.starbucks.in/assets/icon/veg.svg" alt="">
+                                        </div> -->
+                                        <h4 class="card-title">Java Chip Frappuccino </h4>
+                                        <span class="card-subtitle">
+                                            TALL(354 ML) .392 kcal
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="card-footer d-flex justify-content-between  ">
+                                    <div class="left-item">
+                                        <h4>
+                                            ₹ 351<span class="round-figure">.75</span>
+                                        </h4>
+                                    </div>
+                                    <div class="right-item">
+                                        <button class="custom-btn btn-green btn-rounded personal-btn">Add Cart</button>
                                     </div>
                                 </div>
                             </div>
@@ -330,73 +393,32 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="assets/js/jquery_index.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- <script src="assets/js/slick.min.js"></script> -->
     <script type="text/javascript">
         $(document).ready(function () {
             $('#menu').slicknav();
         });
     </script>
     <script>
-        $(document).ready(function () {
-
-            $('.homeslider').slick({
-                dots: false,
-                infinite: false,
-                speed: 300,
-                autoplay: true,
-                slidesToShow: 5,
-                slidesToScroll: 1,
-                responsive: [
-                    {
-                        breakpoint: 1024,
-                        settings: {
-                            autoplay: true,
-                            slidesToShow: 2,
-                            slidesToScroll: 2,
-                            infinite: false,
-                            dots: false,
-                            // arrows:false
-                        }
-                    },
-                    {
-                        breakpoint: 800,
-                        settings: {
-
-                            autoplay: true,
-                            // arrows:false,
-                            infinite: false,
-                            slidesToShow: 1,
-                            slidesToScroll: 1
-                        }
-                    },
-                    {
-                        breakpoint: 600,
-                        settings: {
-                            autoplay: true,
-                            arrows: false,
-                            infinite: false,
-                            slidesToShow: 1,
-                            slidesToScroll: 1
-                        }
-                    },
-                    {
-                        breakpoint: 480,
-                        settings: {
-                            infinite: false,
-                            autoplay: true,
-                            arrows: false,
-                            slidesToShow: 1,
-                            slidesToScroll: 1
-                        }
-                    }
-                    // You can unslick at a given breakpoint now by adding:
-                    // settings: "unslick"
-                    // instead of a settings object
-                ]
-            });
-
-        });
+        $('.homeslider').owlCarousel({
+            loop: true,
+            margin: 20,
+            nav: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                1000: {
+                    items: 5
+                }
+            }
+        })
     </script>
 </body>
 
